Déplacement des fichiers sources

--- a/Documentation/latex/AlgoEnumeration_8cpp.tex
+++ b/Documentation/latex/AlgoEnumeration_8cpp.tex
@@ -1,5 +1,5 @@
-\hypertarget{AlgoEnumeration_8cpp}{\section{\-Algo\-Enumeration.\-cpp \-File \-Reference}
-\label{AlgoEnumeration_8cpp}\index{\-Algo\-Enumeration.\-cpp@{\-Algo\-Enumeration.\-cpp}}
+\hypertarget{AlgoEnumeration_8cpp}{\section{\-Source/\-Algo\-Enumeration.cpp \-File \-Reference}
+\label{AlgoEnumeration_8cpp}\index{\-Source/\-Algo\-Enumeration.\-cpp@{\-Source/\-Algo\-Enumeration.\-cpp}}
 }
 
 
