--- a/Documentation/latex/AlgoEnumeration_8h.tex
+++ b/Documentation/latex/AlgoEnumeration_8h.tex
@@ -1,5 +1,5 @@
-\hypertarget{AlgoEnumeration_8h}{\section{\-Algo\-Enumeration.\-h \-File \-Reference}
-\label{AlgoEnumeration_8h}\index{\-Algo\-Enumeration.\-h@{\-Algo\-Enumeration.\-h}}
+\hypertarget{AlgoEnumeration_8h}{\section{\-Source/\-Algo\-Enumeration.h \-File \-Reference}
+\label{AlgoEnumeration_8h}\index{\-Source/\-Algo\-Enumeration.\-h@{\-Source/\-Algo\-Enumeration.\-h}}
 }
 
 
