--- a/Documentation/latex/Enumeration_8cpp.tex
+++ b/Documentation/latex/Enumeration_8cpp.tex
@@ -1,5 +1,5 @@
-\hypertarget{Enumeration_8cpp}{\section{\-Enumeration.\-cpp \-File \-Reference}
-\label{Enumeration_8cpp}\index{\-Enumeration.\-cpp@{\-Enumeration.\-cpp}}
+\hypertarget{Enumeration_8cpp}{\section{\-Source/\-Enumeration.cpp \-File \-Reference}
+\label{Enumeration_8cpp}\index{\-Source/\-Enumeration.\-cpp@{\-Source/\-Enumeration.\-cpp}}
 }
 
 
