--- a/Documentation/latex/Enumeration_8h.tex
+++ b/Documentation/latex/Enumeration_8h.tex
@@ -1,5 +1,5 @@
-\hypertarget{Enumeration_8h}{\section{\-Enumeration.\-h \-File \-Reference}
-\label{Enumeration_8h}\index{\-Enumeration.\-h@{\-Enumeration.\-h}}
+\hypertarget{Enumeration_8h}{\section{\-Source/\-Enumeration.h \-File \-Reference}
+\label{Enumeration_8h}\index{\-Source/\-Enumeration.\-h@{\-Source/\-Enumeration.\-h}}
 }
 
 
