--- a/Documentation/latex/PartitionnementEnsemble_8cpp.tex
+++ b/Documentation/latex/PartitionnementEnsemble_8cpp.tex
@@ -1,5 +1,5 @@
-\hypertarget{PartitionnementEnsemble_8cpp}{\section{\-Partitionnement\-Ensemble.\-cpp \-File \-Reference}
-\label{PartitionnementEnsemble_8cpp}\index{\-Partitionnement\-Ensemble.\-cpp@{\-Partitionnement\-Ensemble.\-cpp}}
+\hypertarget{PartitionnementEnsemble_8cpp}{\section{\-Source/\-Partitionnement\-Ensemble.cpp \-File \-Reference}
+\label{PartitionnementEnsemble_8cpp}\index{\-Source/\-Partitionnement\-Ensemble.\-cpp@{\-Source/\-Partitionnement\-Ensemble.\-cpp}}
 }
 
 
