--- a/Documentation/latex/PartitionnementEnsemble_8h.tex
+++ b/Documentation/latex/PartitionnementEnsemble_8h.tex
@@ -1,5 +1,5 @@
-\hypertarget{PartitionnementEnsemble_8h}{\section{\-Partitionnement\-Ensemble.\-h \-File \-Reference}
-\label{PartitionnementEnsemble_8h}\index{\-Partitionnement\-Ensemble.\-h@{\-Partitionnement\-Ensemble.\-h}}
+\hypertarget{PartitionnementEnsemble_8h}{\section{\-Source/\-Partitionnement\-Ensemble.h \-File \-Reference}
+\label{PartitionnementEnsemble_8h}\index{\-Source/\-Partitionnement\-Ensemble.\-h@{\-Source/\-Partitionnement\-Ensemble.\-h}}
 }
 
 
