--- a/Documentation/latex/Tournee_8cpp.tex
+++ b/Documentation/latex/Tournee_8cpp.tex
@@ -1,5 +1,5 @@
-\hypertarget{Tournee_8cpp}{\section{\-Tournee.\-cpp \-File \-Reference}
-\label{Tournee_8cpp}\index{\-Tournee.\-cpp@{\-Tournee.\-cpp}}
+\hypertarget{Tournee_8cpp}{\section{\-Source/\-Tournee.cpp \-File \-Reference}
+\label{Tournee_8cpp}\index{\-Source/\-Tournee.\-cpp@{\-Source/\-Tournee.\-cpp}}
 }
 
 
