--- a/Documentation/latex/Tournee_8h.tex
+++ b/Documentation/latex/Tournee_8h.tex
@@ -1,5 +1,5 @@
-\hypertarget{Tournee_8h}{\section{\-Tournee.\-h \-File \-Reference}
-\label{Tournee_8h}\index{\-Tournee.\-h@{\-Tournee.\-h}}
+\hypertarget{Tournee_8h}{\section{\-Source/\-Tournee.h \-File \-Reference}
+\label{Tournee_8h}\index{\-Source/\-Tournee.\-h@{\-Source/\-Tournee.\-h}}
 }
 
 
