--- a/Documentation/latex/VoyageurCommerce2_8cpp.tex
+++ b/Documentation/latex/VoyageurCommerce2_8cpp.tex
@@ -1,5 +1,5 @@
-\hypertarget{VoyageurCommerce2_8cpp}{\section{\-Voyageur\-Commerce2.\-cpp \-File \-Reference}
-\label{VoyageurCommerce2_8cpp}\index{\-Voyageur\-Commerce2.\-cpp@{\-Voyageur\-Commerce2.\-cpp}}
+\hypertarget{VoyageurCommerce2_8cpp}{\section{\-Source/\-Voyageur\-Commerce2.cpp \-File \-Reference}
+\label{VoyageurCommerce2_8cpp}\index{\-Source/\-Voyageur\-Commerce2.\-cpp@{\-Source/\-Voyageur\-Commerce2.\-cpp}}
 }
 
 
