--- a/Documentation/latex/VoyageurCommerce2_8h.tex
+++ b/Documentation/latex/VoyageurCommerce2_8h.tex
@@ -1,5 +1,5 @@
-\hypertarget{VoyageurCommerce2_8h}{\section{\-Voyageur\-Commerce2.\-h \-File \-Reference}
-\label{VoyageurCommerce2_8h}\index{\-Voyageur\-Commerce2.\-h@{\-Voyageur\-Commerce2.\-h}}
+\hypertarget{VoyageurCommerce2_8h}{\section{\-Source/\-Voyageur\-Commerce2.h \-File \-Reference}
+\label{VoyageurCommerce2_8h}\index{\-Source/\-Voyageur\-Commerce2.\-h@{\-Source/\-Voyageur\-Commerce2.\-h}}
 }
 
 
