--- a/Documentation/latex/VoyageurCommerce2opti_8cpp.tex
+++ b/Documentation/latex/VoyageurCommerce2opti_8cpp.tex
@@ -1,5 +1,5 @@
-\hypertarget{VoyageurCommerce2opti_8cpp}{\section{\-Voyageur\-Commerce2opti.\-cpp \-File \-Reference}
-\label{VoyageurCommerce2opti_8cpp}\index{\-Voyageur\-Commerce2opti.\-cpp@{\-Voyageur\-Commerce2opti.\-cpp}}
+\hypertarget{VoyageurCommerce2opti_8cpp}{\section{\-Source/\-Voyageur\-Commerce2opti.cpp \-File \-Reference}
+\label{VoyageurCommerce2opti_8cpp}\index{\-Source/\-Voyageur\-Commerce2opti.\-cpp@{\-Source/\-Voyageur\-Commerce2opti.\-cpp}}
 }
 
 
