--- a/Documentation/latex/VoyageurCommerce2opti_8h.tex
+++ b/Documentation/latex/VoyageurCommerce2opti_8h.tex
@@ -1,5 +1,5 @@
-\hypertarget{VoyageurCommerce2opti_8h}{\section{\-Voyageur\-Commerce2opti.\-h \-File \-Reference}
-\label{VoyageurCommerce2opti_8h}\index{\-Voyageur\-Commerce2opti.\-h@{\-Voyageur\-Commerce2opti.\-h}}
+\hypertarget{VoyageurCommerce2opti_8h}{\section{\-Source/\-Voyageur\-Commerce2opti.h \-File \-Reference}
+\label{VoyageurCommerce2opti_8h}\index{\-Source/\-Voyageur\-Commerce2opti.\-h@{\-Source/\-Voyageur\-Commerce2opti.\-h}}
 }
 
 
