--- a/Documentation/latex/VoyageurCommerce_8cpp.tex
+++ b/Documentation/latex/VoyageurCommerce_8cpp.tex
@@ -1,5 +1,5 @@
-\hypertarget{VoyageurCommerce_8cpp}{\section{\-Voyageur\-Commerce.\-cpp \-File \-Reference}
-\label{VoyageurCommerce_8cpp}\index{\-Voyageur\-Commerce.\-cpp@{\-Voyageur\-Commerce.\-cpp}}
+\hypertarget{VoyageurCommerce_8cpp}{\section{\-Source/\-Voyageur\-Commerce.cpp \-File \-Reference}
+\label{VoyageurCommerce_8cpp}\index{\-Source/\-Voyageur\-Commerce.\-cpp@{\-Source/\-Voyageur\-Commerce.\-cpp}}
 }
 
 
