--- a/Documentation/latex/VoyageurCommerce_8h.tex
+++ b/Documentation/latex/VoyageurCommerce_8h.tex
@@ -1,5 +1,5 @@
-\hypertarget{VoyageurCommerce_8h}{\section{\-Voyageur\-Commerce.\-h \-File \-Reference}
-\label{VoyageurCommerce_8h}\index{\-Voyageur\-Commerce.\-h@{\-Voyageur\-Commerce.\-h}}
+\hypertarget{VoyageurCommerce_8h}{\section{\-Source/\-Voyageur\-Commerce.h \-File \-Reference}
+\label{VoyageurCommerce_8h}\index{\-Source/\-Voyageur\-Commerce.\-h@{\-Source/\-Voyageur\-Commerce.\-h}}
 }
 
 
