--- a/Documentation/latex/classEnumeration.tex
+++ b/Documentation/latex/classEnumeration.tex
@@ -141,5 +141,5 @@ tab n'est pas vide
 
 \-The documentation for this class was generated from the following files\-:\begin{DoxyCompactItemize}
 \item 
-\hyperlink{Enumeration_8h}{\-Enumeration.\-h}\item 
-\hyperlink{Enumeration_8cpp}{\-Enumeration.\-cpp}\end{DoxyCompactItemize}
+\-Source/\hyperlink{Enumeration_8h}{\-Enumeration.\-h}\item 
+\-Source/\hyperlink{Enumeration_8cpp}{\-Enumeration.\-cpp}\end{DoxyCompactItemize}
