--- a/Documentation/latex/classTournee.tex
+++ b/Documentation/latex/classTournee.tex
@@ -128,5 +128,5 @@ permutation\-Min
 
 \-The documentation for this class was generated from the following files\-:\begin{DoxyCompactItemize}
 \item 
-\hyperlink{Tournee_8h}{\-Tournee.\-h}\item 
-\hyperlink{Tournee_8cpp}{\-Tournee.\-cpp}\end{DoxyCompactItemize}
+\-Source/\hyperlink{Tournee_8h}{\-Tournee.\-h}\item 
+\-Source/\hyperlink{Tournee_8cpp}{\-Tournee.\-cpp}\end{DoxyCompactItemize}
