--- a/Documentation/latex/classVoyageurCommerce2.tex
+++ b/Documentation/latex/classVoyageurCommerce2.tex
@@ -132,5 +132,5 @@ permut n'est pas vide
 
 \-The documentation for this class was generated from the following files\-:\begin{DoxyCompactItemize}
 \item 
-\hyperlink{VoyageurCommerce2_8h}{\-Voyageur\-Commerce2.\-h}\item 
-\hyperlink{VoyageurCommerce2_8cpp}{\-Voyageur\-Commerce2.\-cpp}\end{DoxyCompactItemize}
+\-Source/\hyperlink{VoyageurCommerce2_8h}{\-Voyageur\-Commerce2.\-h}\item 
+\-Source/\hyperlink{VoyageurCommerce2_8cpp}{\-Voyageur\-Commerce2.\-cpp}\end{DoxyCompactItemize}
