--- a/Documentation/latex/classVoyageurCommerce2opti.tex
+++ b/Documentation/latex/classVoyageurCommerce2opti.tex
@@ -108,5 +108,5 @@ void \hyperlink{classVoyageurCommerce2opti_ad09c507e5414bda90a79a99774ecf5ad}{re
 
 \-The documentation for this class was generated from the following files\-:\begin{DoxyCompactItemize}
 \item 
-\hyperlink{VoyageurCommerce2opti_8h}{\-Voyageur\-Commerce2opti.\-h}\item 
-\hyperlink{VoyageurCommerce2opti_8cpp}{\-Voyageur\-Commerce2opti.\-cpp}\end{DoxyCompactItemize}
+\-Source/\hyperlink{VoyageurCommerce2opti_8h}{\-Voyageur\-Commerce2opti.\-h}\item 
+\-Source/\hyperlink{VoyageurCommerce2opti_8cpp}{\-Voyageur\-Commerce2opti.\-cpp}\end{DoxyCompactItemize}
