--- a/Documentation/latex/classVoyageurCommerceACO.tex
+++ b/Documentation/latex/classVoyageurCommerceACO.tex
@@ -39,5 +39,5 @@ $<$ int $>$ \& $>$ {\bfseries execute} (\hyperlink{structdonnees}{donnees} const
 
 \-The documentation for this class was generated from the following files\-:\begin{DoxyCompactItemize}
 \item 
-\-Voyageur\-Commerce\-A\-C\-O.\-h\item 
-\-Voyageur\-Commerce\-A\-C\-O.\-cpp\end{DoxyCompactItemize}
+\-Source/\-Voyageur\-Commerce\-A\-C\-O.\-h\item 
+\-Source/\-Voyageur\-Commerce\-A\-C\-O.\-cpp\end{DoxyCompactItemize}
