--- a/Documentation/latex/donnees_8h.tex
+++ b/Documentation/latex/donnees_8h.tex
@@ -1,5 +1,5 @@
-\hypertarget{donnees_8h}{\section{donnees.\-h \-File \-Reference}
-\label{donnees_8h}\index{donnees.\-h@{donnees.\-h}}
+\hypertarget{donnees_8h}{\section{\-Source/donnees.h \-File \-Reference}
+\label{donnees_8h}\index{\-Source/donnees.\-h@{\-Source/donnees.\-h}}
 }
 
 
