--- a/Documentation/latex/files.tex
+++ b/Documentation/latex/files.tex
@@ -1,20 +1,20 @@
 \section{\-File \-List}
 \-Here is a list of all documented files with brief descriptions\-:\begin{DoxyCompactList}
-\item\contentsline{section}{\hyperlink{AlgoEnumeration_8cpp}{\-Algo\-Enumeration.\-cpp} \\*\-Les algorithmes pour l'énumération des regroupements de clients }{\pageref{AlgoEnumeration_8cpp}}{}
-\item\contentsline{section}{\hyperlink{AlgoEnumeration_8h}{\-Algo\-Enumeration.\-h} \\*\-Les algorithmes pour l'énumération des regroupements de clients }{\pageref{AlgoEnumeration_8h}}{}
-\item\contentsline{section}{\hyperlink{donnees_8h}{donnees.\-h} \\*\-Définie les données du problème }{\pageref{donnees_8h}}{}
-\item\contentsline{section}{\hyperlink{Enumeration_8cpp}{\-Enumeration.\-cpp} \\*\-Définie une \hyperlink{classEnumeration}{\-Enumeration} de clients }{\pageref{Enumeration_8cpp}}{}
-\item\contentsline{section}{\hyperlink{Enumeration_8h}{\-Enumeration.\-h} \\*\-Définie une \hyperlink{classEnumeration}{\-Enumeration} de clients }{\pageref{Enumeration_8h}}{}
-\item\contentsline{section}{\hyperlink{PartitionnementEnsemble_8cpp}{\-Partitionnement\-Ensemble.\-cpp} \\*\-Résolution du problème de partitionnement d'ensemble }{\pageref{PartitionnementEnsemble_8cpp}}{}
-\item\contentsline{section}{\hyperlink{PartitionnementEnsemble_8h}{\-Partitionnement\-Ensemble.\-h} \\*\-Résolution du problème de partitionnement d'ensemble }{\pageref{PartitionnementEnsemble_8h}}{}
-\item\contentsline{section}{\hyperlink{projet__MAUSSION__RIOU_8cpp}{projet\-\_\-\-M\-A\-U\-S\-S\-I\-O\-N\-\_\-\-R\-I\-O\-U.\-cpp} \\*\-Optimisation de la deuxième version du problème de voyageur de commerce }{\pageref{projet__MAUSSION__RIOU_8cpp}}{}
-\item\contentsline{section}{\hyperlink{Tournee_8cpp}{\-Tournee.\-cpp} \\*\-Définie une \-Tournée }{\pageref{Tournee_8cpp}}{}
-\item\contentsline{section}{\hyperlink{Tournee_8h}{\-Tournee.\-h} \\*\-Définie une \-Tournée }{\pageref{Tournee_8h}}{}
-\item\contentsline{section}{\hyperlink{VoyageurCommerce_8cpp}{\-Voyageur\-Commerce.\-cpp} \\*\-Première version du problème de voyageur de commerce }{\pageref{VoyageurCommerce_8cpp}}{}
-\item\contentsline{section}{\hyperlink{VoyageurCommerce_8h}{\-Voyageur\-Commerce.\-h} \\*\-Première version du problème de voyageur de commerce }{\pageref{VoyageurCommerce_8h}}{}
-\item\contentsline{section}{\hyperlink{VoyageurCommerce2_8cpp}{\-Voyageur\-Commerce2.\-cpp} \\*\-Deuxième version du problème de voyageur de commerce }{\pageref{VoyageurCommerce2_8cpp}}{}
-\item\contentsline{section}{\hyperlink{VoyageurCommerce2_8h}{\-Voyageur\-Commerce2.\-h} \\*\-Deuxième version du problème de voyageur de commerce }{\pageref{VoyageurCommerce2_8h}}{}
-\item\contentsline{section}{\hyperlink{VoyageurCommerce2opti_8cpp}{\-Voyageur\-Commerce2opti.\-cpp} \\*\-Optimisation de la deuxième version du problème de voyageur de commerce }{\pageref{VoyageurCommerce2opti_8cpp}}{}
-\item\contentsline{section}{\hyperlink{VoyageurCommerce2opti_8h}{\-Voyageur\-Commerce2opti.\-h} \\*\-Optimisation de la deuxième version du problème de voyageur de commerce }{\pageref{VoyageurCommerce2opti_8h}}{}
-\item\contentsline{section}{{\bfseries \-Voyageur\-Commerce\-A\-C\-O.\-h} }{\pageref{VoyageurCommerceACO_8h}}{}
+\item\contentsline{section}{\-Source/\hyperlink{AlgoEnumeration_8cpp}{\-Algo\-Enumeration.\-cpp} \\*\-Les algorithmes pour l'énumération des regroupements de clients }{\pageref{AlgoEnumeration_8cpp}}{}
+\item\contentsline{section}{\-Source/\hyperlink{AlgoEnumeration_8h}{\-Algo\-Enumeration.\-h} \\*\-Les algorithmes pour l'énumération des regroupements de clients }{\pageref{AlgoEnumeration_8h}}{}
+\item\contentsline{section}{\-Source/\hyperlink{donnees_8h}{donnees.\-h} \\*\-Définie les données du problème }{\pageref{donnees_8h}}{}
+\item\contentsline{section}{\-Source/\hyperlink{Enumeration_8cpp}{\-Enumeration.\-cpp} \\*\-Définie une \hyperlink{classEnumeration}{\-Enumeration} de clients }{\pageref{Enumeration_8cpp}}{}
+\item\contentsline{section}{\-Source/\hyperlink{Enumeration_8h}{\-Enumeration.\-h} \\*\-Définie une \hyperlink{classEnumeration}{\-Enumeration} de clients }{\pageref{Enumeration_8h}}{}
+\item\contentsline{section}{\-Source/\hyperlink{PartitionnementEnsemble_8cpp}{\-Partitionnement\-Ensemble.\-cpp} \\*\-Résolution du problème de partitionnement d'ensemble }{\pageref{PartitionnementEnsemble_8cpp}}{}
+\item\contentsline{section}{\-Source/\hyperlink{PartitionnementEnsemble_8h}{\-Partitionnement\-Ensemble.\-h} \\*\-Résolution du problème de partitionnement d'ensemble }{\pageref{PartitionnementEnsemble_8h}}{}
+\item\contentsline{section}{\-Source/\hyperlink{projet__MAUSSION__RIOU_8cpp}{projet\-\_\-\-M\-A\-U\-S\-S\-I\-O\-N\-\_\-\-R\-I\-O\-U.\-cpp} \\*\-Optimisation de la deuxième version du problème de voyageur de commerce }{\pageref{projet__MAUSSION__RIOU_8cpp}}{}
+\item\contentsline{section}{\-Source/\hyperlink{Tournee_8cpp}{\-Tournee.\-cpp} \\*\-Définie une \-Tournée }{\pageref{Tournee_8cpp}}{}
+\item\contentsline{section}{\-Source/\hyperlink{Tournee_8h}{\-Tournee.\-h} \\*\-Définie une \-Tournée }{\pageref{Tournee_8h}}{}
+\item\contentsline{section}{\-Source/\hyperlink{VoyageurCommerce_8cpp}{\-Voyageur\-Commerce.\-cpp} \\*\-Première version du problème de voyageur de commerce }{\pageref{VoyageurCommerce_8cpp}}{}
+\item\contentsline{section}{\-Source/\hyperlink{VoyageurCommerce_8h}{\-Voyageur\-Commerce.\-h} \\*\-Première version du problème de voyageur de commerce }{\pageref{VoyageurCommerce_8h}}{}
+\item\contentsline{section}{\-Source/\hyperlink{VoyageurCommerce2_8cpp}{\-Voyageur\-Commerce2.\-cpp} \\*\-Deuxième version du problème de voyageur de commerce }{\pageref{VoyageurCommerce2_8cpp}}{}
+\item\contentsline{section}{\-Source/\hyperlink{VoyageurCommerce2_8h}{\-Voyageur\-Commerce2.\-h} \\*\-Deuxième version du problème de voyageur de commerce }{\pageref{VoyageurCommerce2_8h}}{}
+\item\contentsline{section}{\-Source/\hyperlink{VoyageurCommerce2opti_8cpp}{\-Voyageur\-Commerce2opti.\-cpp} \\*\-Optimisation de la deuxième version du problème de voyageur de commerce }{\pageref{VoyageurCommerce2opti_8cpp}}{}
+\item\contentsline{section}{\-Source/\hyperlink{VoyageurCommerce2opti_8h}{\-Voyageur\-Commerce2opti.\-h} \\*\-Optimisation de la deuxième version du problème de voyageur de commerce }{\pageref{VoyageurCommerce2opti_8h}}{}
+\item\contentsline{section}{\-Source/{\bfseries \-Voyageur\-Commerce\-A\-C\-O.\-h} }{\pageref{VoyageurCommerceACO_8h}}{}
 \end{DoxyCompactList}
