--- a/Documentation/latex/structdonnees.tex
+++ b/Documentation/latex/structdonnees.tex
@@ -32,4 +32,4 @@
 
 \-The documentation for this struct was generated from the following file\-:\begin{DoxyCompactItemize}
 \item 
-\hyperlink{donnees_8h}{donnees.\-h}\end{DoxyCompactItemize}
+\-Source/\hyperlink{donnees_8h}{donnees.\-h}\end{DoxyCompactItemize}
