--- a/Documentation/latex/classVoyageurCommerce.tex
+++ b/Documentation/latex/classVoyageurCommerce.tex
@@ -132,5 +132,5 @@ permut n'est pas vide
 
 \-The documentation for this class was generated from the following files\-:\begin{DoxyCompactItemize}
 \item 
-\hyperlink{VoyageurCommerce_8h}{\-Voyageur\-Commerce.\-h}\item 
-\hyperlink{VoyageurCommerce_8cpp}{\-Voyageur\-Commerce.\-cpp}\end{DoxyCompactItemize}
+\-Source/\hyperlink{VoyageurCommerce_8h}{\-Voyageur\-Commerce.\-h}\item 
+\-Source/\hyperlink{VoyageurCommerce_8cpp}{\-Voyageur\-Commerce.\-cpp}\end{DoxyCompactItemize}
